# lifehacks.objects

./: README.md  pyproject.toml  temp.py
lifehacks/objects/: __init__.py  __main__.py  clist.py
tests/: test_clist.py
